--- a/About/About.html
+++ b/About/About.html
@@ -386,18 +386,18 @@ $(document).ready(function () {
 <h1>Objectives</h1>
 <p>This is a course about <em>seeing</em> data, about getting comfortable with asking data questions and getting preliminary answers from it, by looking at it. Some things are taken for granted as true in demography. How do we know them anyway? Visualization happens in different ways at each stage of the research process. Let’s talk about it in a deliberate way. And let curiosity drive our questions.</p>
 <p>This is <em>not</em> a course about modeling, but we might do some. This is <em>not</em> a course on formal demography, but we might do some. This is <em>not</em> a research colloquium, but there may be times where it feels like one. This is <em>not</em> a course about <code>R</code>, but it will be a good intro to <code>R</code> anyway. If you’re doing these things in other courses, then this course will be a major booster. Of skills and attitude.</p>
-<p>I hope that this course may serve to support other aspects of your master program and beyong. If you take the tools from this course to heart, then you’ll keep them with you forever.</p>
+<p>I hope that this course may serve to support other aspects of your master program and beyond. If you take the tools from this course to heart, then you’ll keep them with you forever.</p>
 </div>
 <div id="about-me" class="section level1">
 <h1>About me</h1>
 <p>I do demography. Here some key words that might help: Mortality, health, mortality and health inequalities, decomposition, visualization, formal demography, <code>R</code> development of tools for demography. I love this stuff, like for real. I didn’t always do this stuff. My undergrad was in philosophy. All the programming and math came later in life, rather at random. I jsut got over it, learned by experimenting, making mistakes, over and over. And I still do.</p>
 <div id="meetings" class="section level3">
-<h3>meetings</h3>
+<h3>Meetings</h3>
 <p>You can find me at the MPIDR. During this course you should feel somewhat entitled to ask for meetings, but always email enough in advance so that it’s logistically possible. German or English are both OK for in-person meetings. Don’t feel ashamed if you don’t understand something, ask for help.</p>
 <p>Email: <code>riffe@demogr.mpg.de</code></p>
 </div>
 <div id="communication-and-materials" class="section level3">
-<h3>communication and materials</h3>
+<h3>Communication and materials</h3>
 <p>By the way, you should <strong>send me an email</strong> as soon as you decide you’re going to take this class to declare so. I’ll use email, to communicate with you. That includes cancellations, etc. I’ll update a github site after each session, with prettified and annotated code. That’s here: <a href="https://github.com/timriffe/DemoED">https://github.com/timriffe/DemoED</a></p>
 <p>I’ll explain how to use that page effectively as the need arises, but otherwise you can think of it as a stash of downloadable files. It’s pretty bare-bones at the moment, but you just wait.</p>
 <p>I speak and type faster when I’m excited, so you all need to raise a hand or speak up if you want me to slow down or re-explain something.</p>
