add book links in About.Rmd, also reference the new Wilke book

--- a/About/About.html
+++ b/About/About.html
@@ -401,14 +401,16 @@ $(document).ready(function () {
 <p>By the way, you should <strong>send me an email</strong> as soon as you decide you’re going to take this class to declare so. I’ll use email, to communicate with you. That includes cancellations, etc. I’ll update a github site after each session, with prettified and annotated code. That’s here: <a href="https://github.com/timriffe/DemoED">https://github.com/timriffe/DemoED</a></p>
 <p>I’ll explain how to use that page effectively as the need arises, but otherwise you can think of it as a stash of downloadable files. It’s pretty bare-bones at the moment, but you just wait.</p>
 <p>I speak and type faster when I’m excited, so you all need to raise a hand or speak up if you want me to slow down or re-explain something.</p>
+<p>We will refer heavily to a particular book: K Healy (2019) <em>Data Visualization A practical introduction</em>, which gives both theory and code, and is well written. You can find the free online version here: <a href="https://socviz.co/">https://socviz.co/</a><br />
+You can also just buy it if you want. Wouldn’t be a bad use of money. For at least the first several sessions, we’ll follow the book closely.</p>
+<p>There are other resources out there. Another book that supplements ours is: C. Wilke (2019) <em>Fundamentals of Data Visualization: A Primer on Making Informative and Compelling Figures</em>, which you could buy, but which also has a free online version: <a href="https://serialmentor.com/dataviz/">https://serialmentor.com/dataviz/</a>. This book was also composed in R markdown, just like we’re using in class. You can see the guts here: <a href="https://github.com/clauswilke/dataviz">https://github.com/clauswilke/dataviz</a></p>
+<p>I may refer to particular sections of the Wilke book, but we won’t be using it per se as far as I can foresee.</p>
 </div>
 <div id="sessions" class="section level3">
 <h3>Sessions</h3>
 <p>We have a regularly scheduled meeting time of 9:00-11:00, Wednesdays, which you’ve already figured out, <em>but</em> some of these sessions need to be moved because I have business trips, sorry.</p>
 <p>Cancelled sessions (5!) 1. 10.04 2. 15.05 3. 29.05 4. 12.06 5. 03.07</p>
-<p>We of course need to reschedule at least four of these. I suggest to make it simple. I have three proposals to adapt the schedule, and I’ll take the one that doesn’t conflict with other required courses. No mixing! If you can’t make these sessions because of other obligations then I’m sorry, maybe there’s a solution.</p>
-<p>I propose four make-up classes (place tbd, possibly at MPIDR): A. Thursday 9:00-11:00: 06.06, 20.06, 27.06, 11.07 B. Friday 9:00-11:00: 07.06, 21.06, 28.06, 12.07 C. Thursday 15:00-17:00: 06.06, 20.06, 27.06, 11.07</p>
-<p>We need to decide this ASAP, like now.</p>
+<p>These will be replaced by the following sessions, to be held at MPIDR, room 100 Thursday 9:00-11:00: 06.06, 20.06, 27.06, 11.07</p>
 </div>
 </div>
 
