--- a/ClassNotes.html
+++ b/ClassNotes.html
@@ -382,7 +382,8 @@ $(document).ready(function () {
 </div>
 
 
-<p>get packages loaded</p>
+<p>These are the actual class notes from the session. The other docs (VizNotes) were my preparation, less useful for you, apologies for the clutter.</p>
+<p>Start by getting packages loaded:</p>
 <p>We’re starting here: <a href="https://socviz.co/makeplot.html#aesthetics-can-be-mapped-per-geom">https://socviz.co/makeplot.html#aesthetics-can-be-mapped-per-geom</a></p>
 <p>Here is an example of all geoms <em>sharing</em> a mapping because it was given in <code>ggplot()</code>. Ergo, everything is grouped in the same way.</p>
 <pre class="r"><code>p &lt;- ggplot(data = gapminder, 
